feat: Bottom NavBar Theme added

--- a/assets/assets/files/configuration/theme_configuration_2.json
+++ b/assets/assets/files/configuration/theme_configuration_2.json
@@ -4060,6 +4060,423 @@
    },
    {
       "id":1,
+      "title":"Bottom Navigation",
+      "expanded":false,
+      "basic":false,
+      "items":[
+         {
+            "title":"",
+            "sub_items":[
+               {
+                  "id":1,
+                  "subtitle":false,
+                  "title":"Background Color",
+                  "key":"key_bottom_nav_bar_background_color",
+                  "value_type":"string",
+                  "input":"color",
+                  "dark":{
+                     "id":0,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"color",
+                           "selected":true,
+                           "value":"#FF1A1C1E",
+                           "selected_value":"#FF1A1C1E"
+                        }
+                     ]
+                  },
+                  "light":{
+                     "id":1,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"color",
+                           "selected":true,
+                           "value":"#FF1976D2",
+                           "selected_value":"#FF1976D2"
+                        }
+                     ]
+                  }
+               },
+               {
+                  "id":1,
+                  "subtitle":false,
+                  "title":"Selected Item Color",
+                  "key":"key_bottom_nav_bar_selected_item_color",
+                  "value_type":"string",
+                  "input":"color",
+                  "dark":{
+                     "id":0,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"color",
+                           "selected":true,
+                           "value":"#FFFFFFFF",
+                           "selected_value":"#FFFFFFFF"
+                        }
+                     ]
+                  },
+                  "light":{
+                     "id":1,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"color",
+                           "selected":true,
+                           "value":"#FFFFFFFF",
+                           "selected_value":"#FFFFFFFF"
+                        }
+                     ]
+                  }
+               },
+               {
+                  "id":1,
+                  "subtitle":false,
+                  "title":"UnSelected Item Color",
+                  "key":"key_bottom_nav_bar_unselected_item_color",
+                  "value_type":"string",
+                  "input":"color",
+                  "dark":{
+                     "id":0,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"color",
+                           "selected":true,
+                           "value":"#CCFFFFFF",
+                           "selected_value":"#CCFFFFFF"
+                        }
+                     ]
+                  },
+                  "light":{
+                     "id":1,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"color",
+                           "selected":true,
+                           "value":"#CCFFFFFF",
+                           "selected_value":"#CCFFFFFF"
+                        }
+                     ]
+                  }
+               },
+               {
+                  "id":1,
+                  "subtitle":false,
+                  "title":"Elevation",
+                  "key":"key_bottom_nav_bar_elevation",
+                  "value_type":"string",
+                  "input":"number",
+                  "dark":{
+                     "id":0,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"Elevation",
+                           "selected":true,
+                           "value":"1",
+                           "selected_value":"1"
+                        }
+                     ]
+                  },
+                  "light":{
+                     "id":1,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"Elevation",
+                           "selected":true,
+                           "value":"1",
+                           "selected_value":"1"
+                        }
+                     ]
+                  }
+               },
+               {
+                  "id":0,
+                  "subtitle":false,
+                  "title":"Show Selected Labels",
+                  "key":"key_bottom_nav_bar_show_selected_labels",
+                  "value_type":"boolean",
+                  "input":"boolean",
+                  "dark":{
+                     "id":0,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"Show Selected Labels",
+                           "selected":true,
+                           "value":"true",
+                           "selected_value":"true"
+                        }
+                     ]
+                  },
+                  "light":{
+                     "id":1,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"Show Selected Labels",
+                           "selected":true,
+                           "value":"true",
+                           "selected_value":"true"
+                        }
+                     ]
+                  }
+               },
+               {
+                  "id":0,
+                  "subtitle":false,
+                  "title":"Show Selected Labels",
+                  "key":"key_bottom_nav_bar_show_unselected_labels",
+                  "value_type":"boolean",
+                  "input":"boolean",
+                  "dark":{
+                     "id":0,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"Show Selected Labels",
+                           "selected":true,
+                           "value":"true",
+                           "selected_value":"true"
+                        }
+                     ]
+                  },
+                  "light":{
+                     "id":1,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"Show Selected Labels",
+                           "selected":true,
+                           "value":"true",
+                           "selected_value":"true"
+                        }
+                     ]
+                  }
+               }
+            ]
+         },
+         {
+            "title":"Selected Icon",
+            "sub_items":[
+               {
+                  "id":1,
+                  "subtitle":false,
+                  "title":"Color",
+                  "key":"key_bottom_nav_bar_selected_icon_color",
+                  "value_type":"string",
+                  "input":"color",
+                  "dark":{
+                     "id":0,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"color",
+                           "selected":true,
+                           "value":"#FFFFFFFF",
+                           "selected_value":"#FFFFFFFF"
+                        }
+                     ]
+                  },
+                  "light":{
+                     "id":1,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"color",
+                           "selected":true,
+                           "value":"#FFFFFFFF",
+                           "selected_value":"#FFFFFFFF"
+                        }
+                     ]
+                  }
+               },
+               {
+                  "id": 5,
+                  "subtitle":false,
+                  "title":"Icon Size",
+                  "key":"key_bottom_nav_bar_selected_icon_size",
+                  "value_type":"string",
+                  "input":"number",
+                  "dark":{
+                     "id":0,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"Icon Size",
+                           "selected":true,
+                           "value":"24",
+                           "selected_value":"24"
+                        }
+                     ]
+                  },
+                  "light":{
+                     "id":1,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"Icon Size",
+                           "selected":true,
+                           "value":"24",
+                           "selected_value":"24"
+                        }
+                     ]
+                  }
+               }
+            ]
+         },
+         {
+            "title":"UnSelected Icon",
+            "sub_items":[
+               {
+                  "id":1,
+                  "subtitle":false,
+                  "title":"Color",
+                  "key":"key_bottom_nav_bar_unselected_icon_color",
+                  "value_type":"string",
+                  "input":"color",
+                  "dark":{
+                     "id":0,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"color",
+                           "selected":true,
+                           "value":"#CCFFFFFF",
+                           "selected_value":"#CCFFFFFF"
+                        }
+                     ]
+                  },
+                  "light":{
+                     "id":1,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"color",
+                           "selected":true,
+                           "value":"#CCFFFFFF",
+                           "selected_value":"#CCFFFFFF"
+                        }
+                     ]
+                  }
+               },
+               {
+                  "id": 5,
+                  "subtitle":false,
+                  "title":"Icon Size",
+                  "key":"key_bottom_nav_bar_unselected_icon_size",
+                  "value_type":"string",
+                  "input":"number",
+                  "dark":{
+                     "id":0,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"Icon Size",
+                           "selected":true,
+                           "value":"24",
+                           "selected_value":"24"
+                        }
+                     ]
+                  },
+                  "light":{
+                     "id":1,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"Icon Size",
+                           "selected":true,
+                           "value":"24",
+                           "selected_value":"24"
+                        }
+                     ]
+                  }
+               }
+            ]
+         },
+         {
+            "title":"Selected Icon Text",
+            "sub_items":[
+               {
+                  "id": 1,
+                  "subtitle":false,
+                  "title":"Color",
+                  "key":"key_bottom_nav_bar_selected_icon_text_color",
+                  "value_type":"string",
+                  "input":"color",
+                  "dark":{
+                     "id":0,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"color",
+                           "selected":true,
+                           "value":"#FFFFFFFF",
+                           "selected_value":"#FFFFFFFF"
+                        }
+                     ]
+                  },
+                  "light":{
+                     "id":1,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"color",
+                           "selected":true,
+                           "value":"#FFFFFFFF",
+                           "selected_value":"#FFFFFFFF"
+                        }
+                     ]
+                  }
+               }
+            ]
+         },
+         {
+            "title":"UnSelected Icon Text",
+            "sub_items":[
+               {
+                  "id":1,
+                  "subtitle":false,
+                  "title":"Color",
+                  "key":"key_bottom_nav_bar_unselected_icon_text_color",
+                  "value_type":"string",
+                  "input":"color",
+                  "dark":{
+                     "id":0,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"color",
+                           "selected":true,
+                           "value":"#FFFFFFFF",
+                           "selected_value":"#FFFFFFFF"
+                        }
+                     ]
+                  },
+                  "light":{
+                     "id":1,
+                     "value":[
+                        {
+                           "id":0,
+                           "label":"color",
+                           "selected":true,
+                           "value":"#FFFFFFFF",
+                           "selected_value":"#FFFFFFFF"
+                        }
+                     ]
+                  }
+               }
+            ]
+         }
+      ]
+   },
+   {
+      "id":1,
       "title":"Radio",
       "expanded": false,
       "basic": false,
